kubernetes/api/02-deployment-config-mctechapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mctechapi
  labels:
    app: mctechapi
spec:
  template:
    metadata:
      name: mctechapi
      labels:
        app: mctechapi
    spec:
      containers:
        - name: mctechapi-container
          image: ghcr.io/grupo-68-fiap/mctech/api:dev
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          livenessProbe:
            httpGet:
              path: /swagger # adicionar URL de health
              port: 80
            periodSeconds: 10
            failureThreshold: 3
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /swagger # adicionar URL de health
              port: 80
            periodSeconds: 10
            failureThreshold: 5
            initialDelaySeconds: 30
          resources:
            requests:
              memory: 64Mi
              cpu: 5m
            limits:
              memory: 1024Mi
              cpu: 500m
  replicas: 1
  selector:
    matchLabels:
      app: mctechapi
