kubernetes/api/05-svc-mctechapi.yml
apiVersion: v1
kind: Service
metadata:
  labels:
      app: mctechapi-svc
  name: mctechapi-svc
spec:
  type: NodePort
  selector:
    app: mctechapi
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30000
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30001
