kubernetes/api/04-ingress-mctechapi.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mctechapi-ingress
  #annotations:
    #kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /teste
        pathType: Prefix
        backend:
          service:
            name: mctechapi-svc
            port:
              number: 30000
